fix gap in highlights-grid

--- a/src/app/components/pages/about/about.scss
+++ b/src/app/components/pages/about/about.scss
@@ -143,7 +143,7 @@
         }
 
         @include mobile {
-         padding-left: 5px;
+          padding-left: 5px;
         }
 
       }
@@ -176,7 +176,7 @@
       .highlight-card {
         text-align: center;
         --frame-height: 300px;
-        --frame-width: 300px;
+        --frame-width: 100%;
         --frame-justify-content: none;
 
         @include tablet {
